<resources>
    <string name="app_name">RideWhiz</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="senderId">237817979464</string>
    <string name="DEEP_LINK">www.myridewhiz.com</string>
    <string name="PROTOCOL">https</string>
    <string name="google_sign_in_key">237817979464-8r302nr5euouieoqpvg7vlqhrrspuckj.apps.googleusercontent.com</string>
    <string name="google_places_server_key">AIzaSyADxBSnaC9qdGjqHG4s7mtMMI7OQ5oYzsA</string>
    <string name="facebook_app_id">258005881343253</string>
    <string name="fb_login_protocol_scheme">fb258005881343253</string>
    <string name="phone_or_email">PHONE NUMBER OR EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="forgotpassword">Forgot login?</string>
    <string name="account">Don\'t have an account?</string>
    <string name="ac_signup">Sign Up</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="mobile">MOBILE NUMBER</string>
    <string name="vhmodel">Vehicle Model</string>
    <string name="vhtype">Vehicle type</string>
    <string name="maxpass">Max Passengers</string>
    <string name="reqdriver">Request as driver</string>
    <string name="signup">Sign Up</string>
    <string name="authentication_sent">An authentication code will sent your mobile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ride_rate">Help us to serve you better!\n Let us know your feedback!</string>
    <string name="ride_rate_msg">Select Stars and Give Your \n FeedBack</string>
    <string name="ride_rate_comment">Please write your comment here.....</string>
    <string name="ride_rate_wordcount">0</string>
    <string name="ride_rate_totalwords">/500</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Name</string>
    <string name="user_lname">Last Name</string>
    <string name="user_role">User Role</string>
    <string name="approve_req">Request as Driver</string>
    <string name="disable">Disable</string>
    <string name="approve_privilege">Approve (Admin Privilege)</string>
    <string name="admin_apply">Apply</string>
    <string name="choose_group_text">Choose Group</string>
    <string name="create_group_text">CREATE GROUP</string>
    <string name="group_name">GROUP NAME</string>
    <string name="group_create">CREATE</string>
    <string name="group_cancel">CANCEL</string>
    <string name="btn_create">Create</string>
    <string name="btn_cancle">Cancel</string>
    <string name="rider_ratings">Ratings : </string>
    <string name="driver_details">Driver details</string>
    <string name="user_details">User details</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_ph_no">Phone Number</string>
    <string name="txt_next">Next</string>
    <string name="vehicle_privileges">Driver Privileges</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_passengers">Max passengers</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_text">We need your registered EmailId to sent \n you password reset instructions.</string>
    <string name="forgot_reset_password">Reset Password</string>
    <string name="forgot_emailid">Email</string>
    <string name="forgot_back">Back</string>
    <string name="whats_your_mobile_number">What is your mobile number?</string>
    <string name="txt_we_text_you_code_to_verify_this_number">We\'ll text you a code to verify this number</string>
    <string name="txt_i_agree_to">I agree to RideWhiz\'s</string>
    <string name="term_of_service">Terms of Service</string>
    <string name="whats_the_verification_code">What is the verification code?</string>
    <string name="txt_enter_the_code">Enter the code send to </string>
    <string name="resend_code">Resend Code</string>
    <string name="whats_your_name">What is your name?</string>
    <string name="being_real_persion">Being a real person is important on </string>
    <string name="where_do_you_live">Where do you live?</string>
    <string name="essential_find_address">Essential to find matches for you. We don\'t show anyone your exact address.</string>
    <string name="home_address">Home Address</string>
    <string name="whats_your_email">What is your email address?</string>
    <string name="we_use_this_alert">We use this to alert you to carpool matches and other ride notification.</string>
    <string name="email_address">Email Address</string>
    <string name="add_car_info">Add Car Info</string>
    <string name="add_seats">This will help the ride find best car near by.</string>
    <string-array name="max_seats">
        <item>Number of passengers</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
    </string-array>
    <string name="car_model">Enter Car Model</string>
    <string name="car_type">Enter Car Type</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_profile_photo">Add a profile photo?</string>
    <string name="a_clear_photo">A clear photo of your smiling face helps build trust among RideWhiz users.</string>
    <string name="first_name_new">First Name</string>
    <string name="last_name_new">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="group_name_new">Group Name</string>
    <string name="group_description">Description</string>
    <string name="select_theme_for_group">Select a theme for the group</string>
    <string name="txt_write_a_message">Write a message</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="clearChats">Clear Chat</string>
    <string name="clearChats_msg">Are you sure you want to clear chats?</string>
    <string name="invite_email">Invite by email</string>
    <string name="invite_sms">Invite by text message</string>
    <string name="invite_copy">Copy invite link</string>
    <string name="invite_more">More</string>
    <string name="invite_title">Share Invite Link</string>
    <string name="txt_msg_no_internet_available">No Internet Available!!</string>
    <string name="txt_msg_please_try_again">Please Try Again!!</string>
    <string name="txt_no_email_client_installed">No email client configured in your phone.</string>
    <string name="txt_msg_warning">Please enter message to send</string>
    <string name="Volkswagen">Volkswagen</string>
    <string name="Audi">Audi</string>
    <string name="Mercedes">Mercedes</string>
    <string name="Bmw">Bmw</string>
    <string name="Volvo">Volvo</string>
    <string name="Toyota">Toyota</string>
    <string name="Opel">Opel</string>
    <string name="Renault">Renault</string>
    <string name="Peugeot">Peugeot</string>
    <string name="Jeep">Jeep</string>
    <string name="RangeRover">Range Rover</string>
    <string name="Chevrolet">Chevrolet</string>
    <string name="Suzuki">Suzuki</string>
    <string name="Honda">Honda</string>
    <string name="Tesla">Tesla</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="entercarmake">Please enter car make.</string>
    <string name="entercaryear">Please select car year.</string>
    <string name="entercarMonth">Please select car month.</string>
    <string name="entercarlicenseplate">Please enter licenseplate.</string>
    <string name="entercarlicenseplate1">Please enter licenseplate with letter &amp; numbers</string>
    <string name="entercarbrand">Please select car brand.</string>
    <string name="entercartype">Please select car type.</string>
    <string name="entercarseatingcapacity">Please enter car seating capacity.</string>
    <string name="entermodelofthecar">Please enter model of the car.</string>
    <string name="entercartranssiontype">Please select transsion type.</string>
    <string name="entercarcolor">Please select car numberplat color.</string>
    <string name="select_max_person">Select Max Persons :</string>
    <string name="accept_reject">Ride Request from </string>
</resources>