<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ride_rate_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:titleTextColor="@color/colorAccent"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Rate Ride" />

    <LinearLayout
        android:id="@+id/layout_ride_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ride_rate_toolbar"
        android:padding="@dimen/_10sdp">


        <com.app.rideWhiz.widget.TextViewSemiBold
            android:id="@+id/txt_rate_ride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ride_rate"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp" />

        <com.app.rideWhiz.widget.TextViewRegular
            android:id="@+id/txt_rate_ride_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/ride_rate_msg"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sdp" />

        <RatingBar
            android:id="@+id/ride_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:stepSize="1"
            android:theme="@style/RatingBar" />

        <com.app.rideWhiz.widget.TextViewRegular
            android:id="@+id/txt_rate_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_7sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp"
            android:visibility="invisible" />

        <!-- <android.support.design.widget.TextInputLayout
             android:id="@+id/textContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/txt_rate_type"
             >-->

        <com.app.rideWhiz.widget.EditTextRegular
            android:id="@+id/edt_comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextfeedback"
            android:gravity="top"
            android:hint="@string/ride_rate_comment"
            android:inputType="textEmailAddress|textMultiLine"
            android:minLines="5"
            android:padding="@dimen/_7sdp"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:maxLines="5"
            android:textColorHint="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/_5sdp">

            <com.app.rideWhiz.widget.TextViewRegular
                android:id="@+id/txt_rate_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_rate_wordcount"
                android:textColor="@color/blacltext"
                android:visibility="visible" />

            <com.app.rideWhiz.widget.TextViewRegular
                android:id="@+id/txt_rate_tword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_rate_totalwords"
                android:textColor="@color/blacltext"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <com.app.rideWhiz.widget.TextViewSemiBold
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_ride_rate"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />
</RelativeLayout>
