<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:src="@drawable/ic_back" />

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtNext"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <com.app.rideWhiz.widget.TextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_100sdp"
            android:gravity="center"
            android:text="@string/whats_your_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />

        <com.app.rideWhiz.widget.TextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:text="@string/we_use_this_alert"
            android:textColor="@color/whiteOff"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:orientation="vertical">



            <com.app.rideWhiz.widget.EditTextRegular
                android:id="@+id/txtEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="#00000000"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textColorHint="@color/gray"
                android:textColor="#FFF"
                android:textSize="@dimen/_14sdp" />

            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

        </LinearLayout>


    </LinearLayout>


    <com.app.rideWhiz.widget.TextViewSemiBold
        android:id="@+id/txtNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:lineSpacingExtra="1.2dp"
        android:text="@string/txt_next"
        android:textColor="@color/blacltext"
        android:textSize="@dimen/_16sdp" />
</RelativeLayout>