<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.app.rideshare.activity.ForgotPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_car" />

    <com.app.rideshare.widget.TextViewSemiBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_18sdp" />

    <com.app.rideshare.widget.TextViewSemiBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/forgot_password_text"
        android:textAlignment="center"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/colorAccent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgot_email_ti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:theme="@style/TextLabel1"
        app:hintTextAppearance="@style/TextLabelSize">

        <com.app.rideshare.widget.EditTextRegular
            android:id="@+id/forgot_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_emailid"
            android:inputType="textEmailAddress"
            android:textColor="#FFF"
            android:textSize="@dimen/_14sdp" />

    </android.support.design.widget.TextInputLayout>

    <com.app.rideshare.widget.TextViewSemiBold
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:text="@string/forgot_reset_password"
        android:textColor="@color/blacltext"
        android:textSize="@dimen/_16sdp" />

    <com.app.rideshare.widget.TextViewSemiBold
        android:id="@+id/txt_forgot_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="Back"
        android:textAlignment="center"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/colorAccent" />

</LinearLayout>
